force-app/main/default/objects/Account/fields/AccountBA__c.field-meta.xml
<CustomField>
    <fullName>AccountBA__c</fullName>
    <formula>IF(INCLUDES (BusiessAreaForPlanning__c , &quot;ZK&quot; ), &quot;Cold Heading; &quot;,null ) &amp;
IF ( INCLUDES (BusiessAreaForPlanning__c , &quot;ZF&quot; ), &quot;Spring Steel; &quot;,null ) &amp;
IF ( INCLUDES (BusiessAreaForPlanning__c , &quot;ZS&quot; ), &quot;Free Cutting Steel (SZO); &quot;,null ) &amp;
IF ( INCLUDES (BusiessAreaForPlanning__c , &quot;ZW&quot; ), &quot;Bearing Steel; &quot;,null ) &amp;
IF ( INCLUDES (BusiessAreaForPlanning__c , &quot;ZM&quot; ), &quot;Forging Steel; &quot;,null ) &amp;
IF ( INCLUDES (BusiessAreaForPlanning__c , &quot;ZZ - Welding Wire (SZW)&quot; ), &quot;Drawing Grades; &quot;,null ) &amp;
IF ( INCLUDES (BusiessAreaForPlanning__c , &quot;ZZ - Tyre Cord&quot; ), &quot;Drawing Grades&quot;,null ) &amp;
IF ( INCLUDES (BusiessAreaForPlanning__c , &quot;ZZ - Low Carbon&quot; ), &quot;Drawing Grades; &quot;,null ) &amp;
IF ( INCLUDES (BusiessAreaForPlanning__c , &quot;ZZ - Low Carbon - B10&quot; ), &quot;Drawing Grades; &quot;,null ) &amp;
IF ( INCLUDES (BusiessAreaForPlanning__c , &quot;ZZ - High Carbon&quot; ), &quot;Drawing Grades; &quot;,null )</formula>
    <label>AccountBA</label>
    <type>Text</type>
</CustomField>