force-app/main/default/objects/Account/fields/AccountGroupID__c.field-meta.xml
<CustomField>
    <fullName>AccountGroupID__c</fullName>
    <label>Account Group ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>