force-app/main/default/objects/Account/fields/AccountGroupName__c.field-meta.xml
<CustomField>
    <fullName>AccountGroupName__c</fullName>
    <label>Account Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>