force-app/main/default/objects/Account/fields/AdditionalCommentOverdraft__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCommentOverdraft__c</fullName>
    <description>Comment on any additional agreements with the account</description>
    <label>Additional Agreement Overdraft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>
 