force-app/main/default/objects/Account/fields/AdditionalCommentOverdueInvoice__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCommentOverdueInvoice__c</fullName>
    <description>Comment on any additional agreements with the account</description>
    <label>Additional Agreement Overdue Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>
 