force-app/main/default/objects/Account/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <inlineHelpText>Please add the agency who is mainly responsible for the account.</inlineHelpText>
    <label>Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dillinger Direct Sales</fullName>
            </value>
            <value>
                <fullName>Dillinger Saarstahl America</fullName>
            </value>
            <value>
                <fullName>Dillinger España</fullName>
            </value>
            <value>
                <fullName>Dillinger International BeLux</fullName>
            </value>
            <value>
                <fullName>Dillinger International Export</fullName>
            </value>
            <value>
                <fullName>Dillinger International France</fullName>
            </value>
            <value>
                <fullName>Dillinger Italia</fullName>
            </value>
            <value>
                <fullName>Dillinger Middle East</fullName>
            </value>
            <value>
                <fullName>Dillinger Nederland</fullName>
            </value>
            <value>
                <fullName>Dillinger Nordic</fullName>
            </value>
            <value>
                <fullName>Dillinger UK</fullName>
            </value>
            <value>
                <fullName>Karam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>