force-app/main/default/objects/Account/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <label>Assignment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Dillinger</fullName>
            </value>
            <value>
                <fullName>Customer SSC</fullName>
            </value>
            <value>
                <fullName>Customer By-products</fullName>
            </value>
            <value>
                <fullName>Customer SWN</fullName>
            </value>
            <value>
                <fullName>Customer SATRANS</fullName>
            </value>
            <value>
                <fullName>Customer MR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>