force-app/main/default/objects/Account/fields/AverageOverdue__c.field-meta.xml
<CustomField>
    <fullName>AverageOverdue__c</fullName>
    <description>Average overdue, # of days</description>
    <label>Ø-Delay</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>