force-app/main/default/objects/Account/fields/BusiessAreaForPlanning__c.field-meta.xml
<CustomField>
    <fullName>BusiessAreaForPlanning__c</fullName>
    <label>Business area/Product group for planning</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZK</fullName>
                <label>Cold Heading</label>
            </value>
            <value>
                <fullName>ZF</fullName>
                <label>Spring Steel</label>
            </value>
            <value>
                <fullName>ZS</fullName>
                <label>Free Cutting Steel (SZO)</label>
            </value>
            <value>
                <fullName>ZW</fullName>
                <label>Bearing Steel</label>
            </value>
            <value>
                <fullName>ZM</fullName>
                <label>Forging Steel</label>
            </value>
            <value>
                <fullName>ZZ - Welding Wire (SZW)</fullName>
                <label>Drawing Grades - Welding Wire</label>
            </value>
            <value>
                <fullName>ZZ - Tyre Cord</fullName>
                <label>Drawing Grades - Tyre Cord</label>
            </value>
            <value>
                <fullName>ZZ - Low Carbon</fullName>
                <label>Drawing Grades - Low Carbon (w.o. B10)</label>
            </value>
            <value>
                <fullName>ZZ - Low Carbon - B10</fullName>
                <label>Drawing Grades - Low Carbon - B10</label>
            </value>
            <value>
                <fullName>ZZ - High Carbon</fullName>
                <label>Drawing Grades - High Carbon</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>