force-app/main/default/objects/Account/fields/ChannelOfDistribution__c.field-meta.xml
<CustomField>
    <fullName>ChannelOfDistribution__c</fullName>
    <label>Channel Of Distribution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>