force-app/main/default/objects/Account/fields/CommentOverdraft__c.field-meta.xml
<CustomField>
    <fullName>CommentOverdraft__c</fullName>
    <description>Comments for overdraft</description>
    <label>Comment Overdraft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>