force-app/main/default/objects/Account/fields/CommentOverdueInvoice__c.field-meta.xml
<CustomField>
    <fullName>CommentOverdueInvoice__c</fullName>
    <description>Comments for Overdue invoices</description>
    <label>Comment Overdue Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>