force-app/main/default/objects/Account/fields/CommercialRegisterNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercialRegisterNumber__c</fullName>
    <label>Commercial Register Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>