force-app/main/default/objects/Account/fields/CommericalRegisterSeat__c.field-meta.xml
<CustomField>
    <fullName>CommericalRegisterSeat__c</fullName>
    <label>Commerical Register Seat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>