force-app/main/default/objects/Account/fields/ComplianceCheck__c.field-meta.xml
<CustomField>
    <fullName>ComplianceCheck__c</fullName>
    <label>Compliance Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
                <default>true</default>
                <label>Outstanding</label>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>