force-app/main/default/objects/Account/fields/ContactRecommendation__c.field-meta.xml
<CustomField>
    <fullName>ContactRecommendation__c</fullName>
    <label>Contact Recommendation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>