force-app/main/default/objects/Account/fields/Contracttype__c.field-meta.xml
<CustomField>
    <fullName>Contracttype__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Effective</fullName>
            </value>
            <value>
                <fullName>SAG raw material model</fullName>
            </value>
            <value>
                <fullName>Other pricing indices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>