force-app/main/default/objects/Account/fields/CreditAccount__c.field-meta.xml
<CustomField>
    <fullName>CreditAccount__c</fullName>
    <label>Credit Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>