force-app/main/default/objects/Account/fields/CSO__c.field-meta.xml
<CustomField>
    <fullName>CSO__c</fullName>
    <label>CSO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>