force-app/main/default/objects/Account/fields/CTO__c.field-meta.xml
<CustomField>
    <fullName>CTO__c</fullName>
    <label>CTO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>