force-app/main/default/objects/Account/fields/CurrentShortfall__c.field-meta.xml
<CustomField>
    <fullName>CurrentShortfall__c</fullName>
    <description>Currency field in TEUR</description>
    <label>Current Overdraft</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>