force-app/main/default/objects/Account/fields/CustomerCategory__c.field-meta.xml
<CustomField>
    <fullName>CustomerCategory__c</fullName>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base customer</fullName>
            </value>
            <value>
                <fullName>Flex customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>