force-app/main/default/objects/Account/fields/CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerNumber__c</fullName>
    <label>Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>