force-app/main/default/objects/Account/fields/CustomerRole__c.field-meta.xml
<CustomField>
    <fullName>CustomerRole__c</fullName>
    <label>Customer Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Receiver</fullName>
            </value>
            <value>
                <fullName>Regulator</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Logistics Service Provider</fullName>
            </value>
            <value>
                <fullName>Invoice Recipient</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>