force-app/main/default/objects/Account/fields/CustomerSize__c.field-meta.xml
<CustomField>
    <fullName>CustomerSize__c</fullName>
    <label>Customer Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>