force-app/main/default/objects/Account/fields/CustomerSpecificMargin__c.field-meta.xml
<CustomField>
    <fullName>CustomerSpecificMargin__c</fullName>
    <label>Customer Specific Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>