force-app/main/default/objects/Account/fields/DunningLevel__c.field-meta.xml
<CustomField>
    <fullName>DunningLevel__c</fullName>
    <description># of reminders</description>
    <label>Dunning Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>