force-app/main/default/objects/Account/fields/DUNSNumber__c.field-meta.xml
<CustomField>
    <fullName>DUNSNumber__c</fullName>
    <label>DUNS Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>