force-app/main/default/objects/Account/fields/ExternalLimit__c.field-meta.xml
<CustomField>
    <fullName>ExternalLimit__c</fullName>
    <description>Currency field in TEUR</description>
    <label>Limit ext.</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>