force-app/main/default/objects/Account/fields/IndustryInGeneral__c.field-meta.xml
<CustomField>
    <fullName>IndustryInGeneral__c</fullName>
    <label>Industry in general</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive industry</fullName>
            </value>
            <value>
                <fullName>Mechanical engineering</fullName>
            </value>
            <value>
                <fullName>Agricultural machinery</fullName>
            </value>
            <value>
                <fullName>Construction industry</fullName>
            </value>
            <value>
                <fullName>Energy/ Wind power</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>