force-app/main/default/objects/Account/fields/InnovationExecutive__c.field-meta.xml
<CustomField>
    <fullName>InnovationExecutive__c</fullName>
    <label>Innovation Executive</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>