force-app/main/default/objects/Account/fields/InnovationManagement__c.field-meta.xml
<CustomField>
    <fullName>InnovationManagement__c</fullName>
    <label>Innovation Management</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>