force-app/main/default/objects/Account/fields/InnovationRepresentative__c.field-meta.xml
<CustomField>
    <fullName>InnovationRepresentative__c</fullName>
    <label>Innovation Representative</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>