force-app/main/default/objects/Account/fields/InternalLimit__c.field-meta.xml
<CustomField>
    <fullName>InternalLimit__c</fullName>
    <description>Currency field in TEUR</description>
    <label>Limit int.</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>