force-app/main/default/objects/Account/fields/LastUpdatedCommentOverdraft__c.field-meta.xml
<CustomField>
    <fullName>LastUpdatedCommentOverdraft__c</fullName>
    <label>Last Update on Overdrafts</label>
    <type>DateTime</type>
</CustomField>