force-app/main/default/objects/Account/fields/LastUpdatedCommentOverdueInvoice__c.field-meta.xml
<CustomField>
    <fullName>LastUpdatedCommentOverdueInvoice__c</fullName>
    <label>Last Update on Overdue Invoices</label>
    <type>DateTime</type>
</CustomField>