force-app/main/default/objects/Account/fields/ProductManager__c.field-meta.xml
<CustomField>
    <fullName>ProductManager__c</fullName>
    <label>Product Manager</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>