force-app/main/default/objects/Account/fields/QualityExecutive__c.field-meta.xml
<CustomField>
    <fullName>QualityExecutive__c</fullName>
    <label>Quality Executive</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>