force-app/main/default/objects/Account/fields/QualityManagement__c.field-meta.xml
<CustomField>
    <fullName>QualityManagement__c</fullName>
    <label>Quality Management</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>