force-app/main/default/objects/Account/fields/QualityManagementLocation__c.field-meta.xml
<CustomField>
    <fullName>QualityManagementLocation__c</fullName>
    <label>Quality Management Location</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>