force-app/main/default/objects/Account/fields/QualityRepresentative__c.field-meta.xml
<CustomField>
    <fullName>QualityRepresentative__c</fullName>
    <label>Quality Representative</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>