force-app/main/default/objects/Account/fields/Quantitysharefixed__c.field-meta.xml
<CustomField>
    <fullName>Quantitysharefixed__c</fullName>
    <label>Quantity Share Fixed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>