force-app/main/default/objects/Account/fields/Quantityshareflexible__c.field-meta.xml
<CustomField>
    <fullName>Quantityshareflexible__c</fullName>
    <label>Quantity Share Flexible</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>