force-app/main/default/objects/Account/fields/Quantitysharerepeating__c.field-meta.xml
<CustomField>
    <fullName>Quantitysharerepeating__c</fullName>
    <label>Quantity Share Repeating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>