force-app/main/default/objects/Account/fields/ReceivableCurrent__c.field-meta.xml
<CustomField>
    <fullName>ReceivableCurrent__c</fullName>
    <description>Currency field in TEUR</description>
    <label>Outstanding Payment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>