force-app/main/default/objects/Account/fields/RepurchaseProbability__c.field-meta.xml
<CustomField>
    <fullName>RepurchaseProbability__c</fullName>
    <label>Repurchase Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>Unlikely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>