force-app/main/default/objects/Account/fields/RiskRelevantChannelOfDistribution__c.field-meta.xml
<CustomField>
    <fullName>RiskRelevantChannelOfDistribution__c</fullName>
    <label>Risk Relevant Channel of Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>