force-app/main/default/objects/Account/fields/SalesManagement__c.field-meta.xml
<CustomField>
    <fullName>SalesManagement__c</fullName>
    <label>Sales Management</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>