force-app/main/default/objects/Account/fields/SalesRepresentative__c.field-meta.xml
<CustomField>
    <fullName>SalesRepresentative__c</fullName>
    <label>Sales Representative</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>