force-app/main/default/objects/Account/fields/SAPAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>SAPAccountNumber__c</fullName>
    <label>SAP Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>