force-app/main/default/objects/Account/fields/Segment3__c.field-meta.xml
<CustomField>
    <fullName>Segment3__c</fullName>
    <label>Segment 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>