force-app/main/default/objects/Account/fields/SellingOffice__c.field-meta.xml
<CustomField>
    <fullName>SellingOffice__c</fullName>
    <label>Selling Office</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>