force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(  Inactive__c = false , IMAGE(&quot;/resource/Green&quot;, &quot;Green&quot;, 35, 40),
IF ( Inactive__c = true, IMAGE(&quot;/resource/Red&quot;, &quot;Red&quot;,35 ,40),&quot;Error&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>