force-app/main/default/objects/Account/fields/SuccessorCustomer__c.field-meta.xml
<CustomField> 
    <fullName>SuccessorCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Successor Customer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Value does not match filter criteria.</errorMessage>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Salesforce API Only System Integrations</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>DH Customer Administration</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Predecessor Customers</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>