force-app/main/default/objects/Account/fields/TechnicalAdvisor__c.field-meta.xml
<CustomField>
    <fullName>TechnicalAdvisor__c</fullName>
    <label>Technical Advisor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>