force-app/main/default/objects/Account/fields/TotalCurrentDemand__c.field-meta.xml
<CustomField>
    <fullName>TotalCurrentDemand__c</fullName>
    <label>Total Current Demand (t /year)</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>