force-app/main/default/objects/Account/fields/TotalOverdue__c.field-meta.xml
<CustomField>
    <fullName>TotalOverdue__c</fullName>
    <description>Currency field in TEUR</description>
    <label>Total Overdue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>